common/script changes

--- a/apps/dungeoneer-ui/tsconfig.json
+++ b/apps/dungeoneer-ui/tsconfig.json
@@ -4,6 +4,10 @@
   "compilerOptions": {
     "jsx": "react",
     "experimentalDecorators": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
