--- a/apps/dungeoneer-ui-core/package.json
+++ b/apps/dungeoneer-ui-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dungeoneer-ui",
+  "name": "dungeoneer-ui-core",
   "version": "1.0.0",
   "description": "A simple note taking app.",
   "type": "module",
@@ -31,6 +31,7 @@
     "process": "^0.11.10",
     "typescript": "~5.8.2",
     "@types/react": "~19.0.10",
-    "@types/react-dom": "~19.0.4"
+    "@types/react-dom": "~19.0.4",
+    "parcel": "~2.15.2"
   }
 }
