--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A toolset for dungeon masters to create and manage tabletop RPG campaigns.",
   "main": "node apps/dungeoneer-ui-core/src/index.js",
   "scripts": {
-    "start": "npm parcel apps/dungeoneer-ui-core/src/index.html",
+    "start": "parcel apps/dungeoneer-ui-core/src/index.html",
     "dev": "parcel apps/dungeoneer-ui-core/src/index.html",
+    "build": "parcel build apps/dungeoneer-ui-core/src/index.html",
     "test": "test",
     "deploy": "git push heroku main",
     "clean": "prettier . --write"
