--- a/apps/dungeoneer-ui-core/package.json
+++ b/apps/dungeoneer-ui-core/package.json
@@ -18,16 +18,5 @@
   "bugs": {
     "url": "https://github.com/haydentwestbrook/dungeoneer/issues"
   },
-  "homepage": "https://github.com/haydentwestbrook/dungeoneer#readme",
-  "dependencies": {
-    "react": "~19.0.0",
-    "react-dom": "~19.0.0"
-  },
-  "devDependencies": {
-    "process": "^0.11.10",
-    "typescript": "~5.8.2",
-    "@types/react": "~19.0.10",
-    "@types/react-dom": "~19.0.4",
-    "parcel": "~2.15.2"
-  }
+  "homepage": "https://github.com/haydentwestbrook/dungeoneer#readme"
 }
