--- a/package.json
+++ b/package.json
@@ -20,7 +20,14 @@
     "url": "https://github.com/haydentwestbrook/dungeoneer/issues"
   },
   "homepage": "https://github.com/haydentwestbrook/dungeoneer#readme",
+  "dependencies": {
+    "react": "~19.0.0",
+    "react-dom": "~19.0.0"
+  },
   "devDependencies": {
+    "typescript": "~5.8.2",
+    "@types/react": "~19.0.10",
+    "@types/react-dom": "~19.0.4",
     "parcel": "^2.15.2"
   }
 }
